# TAA

./: Lab2.cpp  Lab2.cpp.txt
Lab 11/: argument_obfuscation.cpp  examples.py  memory_scattering.cpp
Lab 12/: anti_debug_linux.cpp  crackme.cpp  recover_password.cpp  sample_program.cpp  simple_packer.cpp  simple_stub.cpp
Lab 5-8/: CMakeLists.txt  Makefile  README.md  protectusb_menu
Lab 5-8 /src/: menu_main.cpp  usb_detector.cpp  utils.cpp
Lab 5-8/include/: menu_cipher.h
Lab 5-8/src/: menu_cipher.cpp
Lab 9/: Lab 9.docx  hello_sections.cpp  patch_string.py
Lab1/: system_info.sh  system_info_advanced.sh
Lab3/: CMakeLists.txt  README.txt
Lab3/include/: HardwareID.h  LicenseKey.h  LicenseManager.h
Lab3/src/: HardwareID.cpp  LicenseKey.cpp  LicenseManager.cpp  main.cpp
Lab5/: CMakeLists.txt  Makefile  README.md
Lab5/include/: cipher.h  utils.h
Lab5/src/: cipher.cpp  file_operations.cpp  main.cpp
updated_menu_version/: CMakeLists.txt  Makefile  README.md  protectusb_menu
updated_menu_version/include/: file_operations.h  menu_cipher.h  usb_detector.h
updated_menu_version/src/: menu_cipher.cpp  menu_main.cpp
